use substr
