# app/Http/Requests/ProductUpdateRequest.php
@@ -1,0 +1,35 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ProductUpdateRequest extends ApiFormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules()
+    {
+         return [
+            'title'=>'required',
+            'slug'=>'required|string|unique:products,slug,'.$this->id, 
+            'description'=>'nullable',
+            'image'=>'nullable',
+            
+            'price'=>'required'
+        ];
+    }
+}
